# winoreat_backend

./: Dockerfile  README.md  manage.py  naver.py  pyproject.toml
.github/workflows/: build_and_push_dockerhub.yaml
bugs/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
bugs/migrations/: 0001_initial.py  0002_alter_bug_bug_type.py
exceptions/: __init__.py  naver.py  response.py
restaurants/: admin.py  dtos.py  filters.py  handlers.py  managers.py  models.py  querysets.py  serializers.py  services.py  urls.py  validators.py  views.py
restaurants/migrations/: 0001_initial.py  0002_alter_restaurant_category_restaurantimage.py  0003_alter_restaurantimage_img_url.py  0004_alter_restaurant_options_and_more.py  0004_restaurant_suggested_count.py  0005_remove_restaurant_ip_address_ipaddress.py
utils/: clients.py  parsers.py
winoreat/: asgi.py  settings.py  urls.py  wsgi.py
